@startuml

title __NLP's Class Diagram__\n

  namespace ClientUS {
    namespace NLP {
      class ClientUS.NLP.Liste {
          ~ JJ_list : List<String>
          ~ NN_list : List<String>
          ~ VB_list : List<String>
          ~ a_list : List<a_rel>
          ~ ac_list : List<String>
          ~ c_list : List<c_obj>
          ~ h_list : List<h_rel>
          ~ r_list : List<r_rel>
          + Liste()
          + add_item_h_list()
          + add_item_r_list()
          + getA_list()
          + getAc_list()
          + getActor_of_story()
          + getC_list()
          + getH_list()
          + getJJ_list()
          + getNN_list()
          + getR_list()
          + getVB_list()
          + gethRelNew()
          + getrRelNew()
          + hListAddAll()
          + print_R_list()
          + print_c_list()
          + print_h_list()
          + removeDuplicates_r()
          + removeDuplicates_r_manuale()
          + setA_list()
          + setAc_list()
          + setActor_of_story()
          + setC_list()
          + setJJ_list()
          + setNN_list()
          + setR_list()
          + setVB_list()
          + sethRelNew()
          + setrRelNew()
      }
    }
  }
  

  namespace ClientUS {
    namespace NLP {
      class ClientUS.NLP.NLP {
          + C_list : List<String>
          + NN_list : List<String>
          + VB_list : List<String>
          + file : File
          ~ scan : Scanner
          ~ sentences : List<CoreMap>
          ~ triples : Collection<RelationTriple>
          {static} - stub : UserInterface
          + NLP()
      }
    }
  }
  

  namespace ClientUS {
    namespace NLP {
      class ClientUS.NLP.ThreadNLP {
          + ThreadNLP()
          + run()
      }
    }
  }
  

  ClientUS.NLP.Liste o-- ClientUS.NLP.Other.Actor_of_story : Actor_of_story
  ClientUS.NLP.Liste o-- ClientUS.NLP.Other.h_rel_new : hRelNew
  ClientUS.NLP.Liste o-- ClientUS.NLP.Other.r_rel_new : rRelNew
  ClientUS.NLP.NLP .up.|> ClientUS.RemoteListener
  ClientUS.NLP.NLP o-- ClientUS.NLP.Other.Actor_of_story : actor
  ClientUS.NLP.ThreadNLP .up.|> ClientUS.RemoteListener
  ClientUS.NLP.ThreadNLP .up.|> java.lang.Runnable
  ClientUS.NLP.ThreadNLP o-- ServerUS.StoryBuilder : storyBuilder
  ClientUS.NLP.ThreadNLP o-- ServerUS.UserInterface : stub


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
